<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/allAddButtons"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_command"
        android:gravity="center"
        android:textSize="20sp"
        android:padding="10dp"
        android:textStyle="italic"
        />

    <Button
        android:id="@+id/addMotor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/BetterButton"
        android:textSize="20sp"
        android:text="@string/add_motor" />

    <Button
        android:id="@+id/addTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/BetterButton"
        android:textSize="20sp"
        android:text="@string/add_time_delay" />

    <Button
        android:id="@+id/addRandomCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/BetterButton"
        android:textSize="20sp"
        android:text="@string/add_random_function_call" />

    <Button
        android:id="@+id/addWaitForColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/BetterButton"
        android:textSize="20sp"
        android:text="@string/add_waiting_for_color" />

    <Button
        android:id="@+id/addExecIfColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/BetterButton"
        android:textSize="20sp"
        android:text="@string/add_execute_if_color" />

    <Button
        android:id="@+id/addExecIfColorX2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/BetterButton"
        android:textSize="20sp"
        android:text="☯︎ Execute If Color, 2x" />

    <Button
        android:id="@+id/addExecIfNotColorX2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/BetterButton"
        android:textSize="20sp"
        android:text="!☯︎ Wait for Not Color, 2x" />

    <Button
        android:id="@+id/addWaitForColorChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/BetterButton"
        android:textSize="20sp"
        android:text="🕵️ Wait for Color Change" />

    <Button
        android:id="@+id/addDrawnControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/BetterButton"
        android:textSize="20sp"
        android:text="@string/add_drawn_motor_control"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/addSoundFX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/BetterButton"
        android:textSize="20sp"
        android:text="@string/add_sound_effect"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/addQuit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/BetterButton"
        android:textSize="20sp"
        android:text="@string/add_quit_execution"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        style="@style/BetterButton"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/cancel"
        android:textAllCaps="false" />


</LinearLayout>