<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333539"
    android:orientation="vertical">

    <TextView
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_200"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/manualControl"
        style="@style/BetterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manual_control_menu"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/createProject"
        style="@style/BetterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_project_menu"
        android:textAllCaps="false" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/projects_title"
        android:textSize="20sp" />

    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:id="@+id/projectList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <include layout="@layout/project_button" />

            <include layout="@layout/project_button" />

            <include layout="@layout/project_button" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>