<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/primaryGroup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/camera_title"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/resultPreview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="" />

        <View
            android:id="@+id/colorPreview0"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_margin="5dp"
            android:background="@color/black" />

        <View
            android:id="@+id/colorPreview1"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_margin="5dp"
            android:background="@color/black" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.camera.view.PreviewView
            android:id="@+id/preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <me.antonionoack.ircontrol.ir.views.CrosshairView
            android:id="@+id/crosshair"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/sensitivitySlider"
        android:padding="5dp"
        android:text="@string/sensitivity_title"
        android:textAlignment="center" />

    <com.google.android.material.slider.Slider
        android:id="@+id/sensitivitySlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stepSize="0"
        android:value="0.5"
        android:valueFrom="0"
        android:valueTo="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            style="@style/BetterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/okButton"
            style="@style/BetterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>